@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2002, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -21,6 +22,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 /**
@@ -71,7 +73,7 @@ public class SimpleVersionedClient {
     private TestResponse invokeServlet() throws Exception {
         log("Invoking URL = " + url);
         log("Expected version identifier = " + versionIdentifier);
-        URL u = new URL(url);
+        URL u = URI.create(url).toURL();
         HttpURLConnection c1 = (HttpURLConnection)u.openConnection();
         int code = c1.getResponseCode();
         InputStream is = c1.getInputStream();
