@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -135,7 +136,7 @@ public class Client {
 
     private int invokeServlet(String url) throws Exception {
 
-        URL u = new URL(url);
+        URL u = URI.create(url).toURL();
 
         HttpURLConnection c1 = (HttpURLConnection)u.openConnection();
         int code = c1.getResponseCode();
