@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -22,6 +23,7 @@ import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.ArrayList;
@@ -110,7 +112,7 @@ public class WebTest {
         String line = null;
 
         try{
-            URL url = new URL(urlStr);
+            URL url = URI.create(urlStr).toURL();
             String data = "msg=" + URLEncoder.encode(message);
             HttpURLConnection urlConnection =  (HttpURLConnection)url.openConnection();
             urlConnection.setRequestMethod("POST");
@@ -164,7 +166,7 @@ public class WebTest {
             BufferedReader br = null;
 
             try {
-                URL url = new URL(urlStr);
+                URL url = URI.create(urlStr).toURL();
                 HttpURLConnection urlConnection =  (HttpURLConnection)url.openConnection();
                 urlConnection.setRequestMethod("GET");
                 urlConnection.connect();
