@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -65,8 +66,8 @@ public class WebTest {
 
     private void invokeCreateCookie() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot
-                          + "/createCookie");
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot
+                          + "/createCookie").toURL();
         System.out.println(url.toString());
 
         URLConnection conn = url.openConnection();
