@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -44,7 +45,7 @@ public class WebTest {
 
         try{
             System.out.println("Running test");
-url = new URL("https://" + host  + ":" + 8181 + contextRoot + "/ServletTest");
+url = URI.create("https://" + host  + ":" + 8181 + contextRoot + "/ServletTest").toURL();
             //url = new URL("https://" + host  + ":" + port + contextRoot + "/ServletTest");
             String originalLoc = url.toString();
             System.out.println("\n Invoking url: " + url.toString());
