@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -20,6 +21,7 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.MalformedURLException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.util.Enumeration;
@@ -322,7 +324,7 @@ public class WebTest {
                     queryString.append( URLEncoder.encode(paramName,"ISO8859-1") + "=" + URLEncoder.encode(paramValue,"ISO8859-1") );
             }
         }
-        URL urlToCall = new URL( url + queryString.toString() );
+        URL urlToCall = URI.create( url + queryString.toString() ).toURL();
         HttpURLConnection urlConnection = (HttpURLConnection) urlToCall.openConnection();
         urlConnection.setInstanceFollowRedirects(true);
         urlConnection.setUseCaches(false);
@@ -399,7 +401,7 @@ public class WebTest {
      **/
     protected static Hashtable doPostCall(String url, Hashtable headers, String[] cookies, Hashtable requestParams)
                         throws MalformedURLException, IOException {
-        URL urlToCall = new URL(url);
+        URL urlToCall = URI.create(url).toURL();
         HttpURLConnection urlConnection = (HttpURLConnection) urlToCall.openConnection();
         urlConnection.setInstanceFollowRedirects(true);
         urlConnection.setUseCaches(false);
