@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -56,8 +57,8 @@ public class WebTest {
         // An error should be raised with undeclared tag
 
         try {
-            URL url = new URL("http://" + host  + ":" + port
-                              + contextRoot + "/jsp/test.jsp");
+            URL url = URI.create("http://" + host  + ":" + port
+                              + contextRoot + "/jsp/test.jsp").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
@@ -79,8 +80,8 @@ public class WebTest {
 
         BufferedReader bis = null;
         try {
-            URL url = new URL("http://" + host  + ":" + port
-                              + contextRoot + "/jsp/test2.jsp");
+            URL url = URI.create("http://" + host  + ":" + port
+                              + contextRoot + "/jsp/test2.jsp").toURL();
             System.out.println("Connecting to: " + url.toString());
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
