@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -119,7 +120,7 @@ public class WebTest {
 
         StringBuilder sb = new StringBuilder();
 
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.addRequestProperty("accept", "application/xml");
