@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -65,7 +66,7 @@ public class WebTest {
 
         String uri = contextRoot +
             "/ServletTest?user=testuser3&password=secret";
-        URL url = new URL("http://" + host  + ":" + port + uri);
+        URL url = URI.create("http://" + host  + ":" + port + uri).toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
