@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -59,14 +60,14 @@ public class WebTest
          throws Exception
     {
 
-        URL url = new URL("http://" + host  + ":" + port + contextPath);
+        URL url = URI.create("http://" + host  + ":" + port + contextPath).toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
         int responseCode = conn.getResponseCode();
         System.out.println("Response code: " + responseCode);
         if (responseCode == HttpURLConnection.HTTP_MOVED_TEMP) {
-            url = new URL(conn.getHeaderField("Location"));
+            url = URI.create(conn.getHeaderField("Location")).toURL();
             System.out.println("Redirected to: " + url.toString());
             conn = (HttpURLConnection) url.openConnection();
             conn.connect();
