@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -55,8 +56,8 @@ public class WebTest {
     }
 
     public void doTest() throws Exception {
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/newServlet");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/newServlet").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
