@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -56,8 +57,8 @@ public class WebTest {
 
     public void doForward() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From?mode=forward");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From?mode=forward").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -71,8 +72,8 @@ public class WebTest {
 
     public void doInclude() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From?mode=include");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From?mode=include").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -86,8 +87,8 @@ public class WebTest {
 
     public void doError() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                          + contextRoot + "/From?mode=error");
+        URL url = URI.create("http://" + host  + ":" + port
+                          + contextRoot + "/From?mode=error").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
