@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -100,7 +101,7 @@ public class WebTest {
         }
 
         String redirect = location.substring("Location:".length()).trim();
-        followRedirect(new URL(redirect));
+        followRedirect(URI.create(redirect).toURL());
     }
 
     private void followRedirect(URL url) throws Exception {
