@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -67,8 +68,8 @@ public class WebTest {
 
     private void invokeAtRootContext() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port +
-            "/checkRequestPath?run=first");
+        URL url = URI.create("http://" + host  + ":" + port +
+            "/checkRequestPath?run=first").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -78,8 +79,8 @@ public class WebTest {
                                 + ", received: " + responseCode);
         }
 
-        url = new URL("http://" + host  + ":" + port +
-            "/dispatchFrom?run=first");
+        url = URI.create("http://" + host  + ":" + port +
+            "/dispatchFrom?run=first").toURL();
         System.out.println("Connecting to: " + url.toString());
         conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -92,8 +93,8 @@ public class WebTest {
 
     private void invokeAtContextRoot() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + contextRoot +
-            "/checkRequestPath?run=second");
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot +
+            "/checkRequestPath?run=second").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -103,8 +104,8 @@ public class WebTest {
                                 + ", received: " + responseCode);
         }
 
-        url = new URL("http://" + host  + ":" + port + contextRoot +
-            "/dispatchFrom?run=second");
+        url = URI.create("http://" + host  + ":" + port + contextRoot +
+            "/dispatchFrom?run=second").toURL();
         System.out.println("Connecting to: " + url.toString());
         conn = (HttpURLConnection) url.openConnection();
         conn.connect();
