@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -19,6 +20,7 @@ package org.glassfish.tests.embedded.mdb;
 import org.junit.Test;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 /**
@@ -29,7 +31,7 @@ public class MyTest {
 
     @Test
     public void test() throws Exception {
-        URL url = new URL("http://localhost:8080/test/TesterServlet");
+        URL url = URI.create("http://localhost:8080/test/TesterServlet").toURL();
         HttpURLConnection uc = (HttpURLConnection) url.openConnection();
         System.out.println("Test status : " + uc.getResponseMessage());
         if (uc.getResponseCode() != 200) {
