@@ -19,6 +19,7 @@ package org.glassfish.tests.standalonewar;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import org.hamcrest.CoreMatchers;
@@ -44,7 +45,7 @@ public class WebTest {
 
     private static void goGet(String host, int port,
             String result, String contextPath) throws Exception {
-        URL servlet = new URL("http://localhost:8080/test");
+        URL servlet = URI.create("http://localhost:8080/test").toURL();
         URLConnection yc = servlet.openConnection();
         BufferedReader in = new BufferedReader(new InputStreamReader(
                 yc.getInputStream()));
