@@ -27,6 +27,7 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -82,7 +83,7 @@ public class WebAllTest {
         String appName = deployer.deploy(builder.buildWar(), dp);
         Assert.assertNotNull("Deployment failed!", appName);
 
-        URL servlet = new URL("http://localhost:8080/classes/hello");
+        URL servlet = URI.create("http://localhost:8080/classes/hello").toURL();
         URLConnection yc = servlet.openConnection();
         BufferedReader in = new BufferedReader(
                                 new InputStreamReader(
