@@ -20,6 +20,7 @@ package org.glassfish.tests.embedded.web;
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.net.URLConnection;
@@ -92,7 +93,7 @@ public class EmbeddedClassLoaderTest {
         try {
             wc.addContext(context, contextRoot);
 
-            URL servlet = new URL("http://localhost:8080/test/testgf");
+            URL servlet = URI.create("http://localhost:8080/test/testgf").toURL();
             URLConnection yc = servlet.openConnection();
             StringBuilder sb = new StringBuilder();
 
