@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -62,8 +63,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                + contextRoot + "/including.jsp");
+        URL url = URI.create("http://" + host  + ":" + port
+                + contextRoot + "/including.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -83,8 +84,8 @@ public class WebTest {
 
     public void analyseResult(String result) throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                +"/dbReader/dbReader?servletName=callflow-simple-jsp");
+        URL url = URI.create("http://" + host  + ":" + port
+                +"/dbReader/dbReader?servletName=callflow-simple-jsp").toURL();
         System.out.println("Analysing Result .... Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
@@ -111,8 +112,8 @@ public class WebTest {
 
     public void cleandb() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-                +"/dbReader/dbReader?cleandb=true");
+        URL url = URI.create("http://" + host  + ":" + port
+                +"/dbReader/dbReader?cleandb=true").toURL();
         System.out.println("Cleaning DB .... Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
